[build-system]
requires = []
build-backend = "build_backend"
backend-path = ["."]

[project]
name = "broadcast-server"
version = "0.1.0"
description = "CLI-based WebSocket broadcast server and client"
readme = "README.md"
requires-python = ">=3.10"
dependencies = [
    "websockets>=16.0",
]

[project.scripts]
broadcast-server = "cli:main"
